# nebula-notepad

./: .gitignore  README.md  STORE.md  index.html  manifest.json
.github/workflows/: release.yml
icons/: ICONS_NOTE.txt
logo-placeholder/: LOGO_PLACEHOLDER.txt
src-tauri/: Cargo.toml  tauri.conf.json
