[package]
name = "nebula-notepad"
version = "0.1.0"
description = "WTE Nebula Notepad - cosmic themed offline notepad"
authors = ["William Thomason English"]
license = "MIT"
repository = "https://github.com/Eloquenta-English/nebula-notepad"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
